Migrate to spring boot